--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link rel="stylesheet" href="./src/scss/index.scss" />
+		<title>Document</title>
+		<main class="bouncer-container"></main>
+		<script src="./src/ts/index.ts"></script>
+	</head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="./src/scss/index.scss">
-	<title>Document</title>
-	<main class="game-container">
-	</main>
-	<script src="./src/ts/index.ts"></script>
-</head>
-
-<body>
-
-</body>
-
+	<body></body>
 </html>
