--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link rel="stylesheet" href="./src/scss/index.scss" />
+		<link rel="stylesheet" href="./index.scss" />
 		<title>Document</title>
 		<main class="bouncer-container"></main>
-		<script src="./src/ts/index.ts"></script>
+		<script src="./page.ts"></script>
 	</head>
 
 	<body></body>
