--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link rel="stylesheet" href="./index.scss" />
 		<title>Celesti</title>
-		<main class="bouncer-container"></main>
+		<main id="grid">
+			<div id="default">
+				<div class="bouncer-container"></div>
+			</div>
+			<div id="custom">
+				<div class="bouncer-container"></div>
+
+			</div>
+			<div id="universe">
+				<div class="bouncer-container"></div>
+			</div>
+			<div id="four">
+				
+
+			</div>
+		</main>
 		<script src="./page.ts"></script>
 	</head>
 	<body></body>
