--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 		<title>Celesti</title>
 		<main id="grid">
 			<div id="default">
+				<div class="label">Default</div>
 				<div class="bouncer-container"></div>
 			</div>
 			<div id="custom">
+				<div class="label">Custom BG</div>
 				<div class="bouncer-container"></div>
 
 			</div>
 			<div id="universe">
+				<div class="label">Universe</div>
 				<div class="bouncer-container"></div>
 			</div>
 			<div id="four">
 				
-
 			</div>
 		</main>
 		<script src="./page.ts"></script>
