--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 				<div class="label">Universe</div>
 				<div class="bouncer-container"></div>
 			</div>
-			<div id="four">
-				
+			<div id="wanderer">
+				<div class="label">wanderer</div>
+				<div class="bouncer-container"></div>
 			</div>
 		</main>
 		<script src="./page.ts"></script>
